# fastapi-shadcn-admin

./: .vercelignore  Procfile  README.md  demo_for_recording.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/workflows/: tests.yml
api/: index.py
demo/: RAILWAY.md  README.md  app.py  requirements.txt  test_local.py
fastapi_shadcn_admin/auth/: models.py
fastapi_shadcn_admin/core/: integrator.py  router.py
fastapi_shadcn_admin/templates/layouts/: base.html
fastapi_shadcn_admin/templates/pages/: edit.html  index.html  list.html
tests/: test_production.py
