[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-shadcn-admin"
version = "0.2.0"
description = "Zero-Node.js, Pydantic-First Admin Interface for FastAPI with Shadcn-inspired UI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "fastapi-shadcn-admin contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
keywords = ["fastapi", "admin", "pydantic", "htmx", "shadcn"]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "uvicorn>=0.23",
    "aiosqlite>=0.19",
    "black>=23.0",
    "ruff>=0.1.0",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/rasinmuhammed/fastapi-shadcn-admin"
Documentation = "https://github.com/rasinmuhammed/fastapi-shadcn-admin#readme"
Repository = "https://github.com/rasinmuhammed/fastapi-shadcn-admin"
"Bug Tracker" = "https://github.com/rasinmuhammed/fastapi-shadcn-admin/issues"
Changelog = "https://github.com/rasinmuhammed/fastapi-shadcn-admin/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_shadcn_admin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "asyncio: mark test as async",
]
